p2/confs/services.yaml
# Service for App 1
apiVersion: v1
kind: Service
metadata:
  name: svc-app1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
---
# Service for App 2
apiVersion: v1
kind: Service
metadata:
  name: svc-app2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
---
# Service for App 3
apiVersion: v1
kind: Service
metadata:
  name: svc-app3
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 80
