p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: iot-part2 
spec:
  rules:
  # Route app1.com to App 1
  - host: app1.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-app1
            port: 
              number: 80
  # Route app2.com to App 2
  - host: app2.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-app2
            port: 
              number: 80
  # Default (no host) to App 3
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-app3
            port: 
              number: 80
